# symprosys-task

./: README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 9c6660320928_initial_database_setup.py
app/: .env  main.py
app/core/: __init__.py
app/db/: __init__.py  db_service.py
app/helpers/: __init__.py
app/models/: __init__.py  products.py
app/routers/: __init__.py  products.py  token_generation.py
app/schemas/: __init__.py  products.py  token_generation.py
